# Qt-C-Honor-s-Project

./: README.md  main.cpp  videoplayer.cpp  videoplayer.h
finalHonor/: CMakeLists.txt  coursedetail.cpp  coursedetail.h  coursedetail.ui  courses.cpp  courses.h  courses.ui  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  userdata.txt
finalHonor/videoplay/: videoplay.pro  videoplayer.ui
